--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
+    "gatsby-plugin-sitemap": "^4.1.0",
+    "gatsby-theme-blog": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
